# ComfyUI-SUPIR-Parallel

./: CLAUDE.md  multi_gpu_vae_hook.py  multiprocessing_fix_documentation.md  nodes_v2.py  pyproject.toml
digest/: build_tasks_queue.md
